# Cmake_Template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  common-tools.cmake  run-clang-format.py  workspace.code-workspace
.gitea/workflows/: build.yml
.github/workflows/: build.yml  release.yml
C_Code_Folder/Inc/: file1.h
C_Code_Folder/Src/: file1.c
Components/CPP_Code_Folder/: CMakeLists.txt
Components/CPP_Code_Folder/Inc/: file2.hpp
Components/CPP_Code_Folder/Src/: file2.cpp
Components/C_Code_Folder/: CMakeLists.txt
Components/C_Code_Folder/Inc/: file1.h
Components/C_Code_Folder/Src/: file1.c
Components/IncludeOnlyComponent/: CMakeLists.txt
Components/IncludeOnlyComponent/Inc/: IncludeOnlyComponent.hpp
Core/Inc/: add.hpp  main.hpp  test.hpp
Core/Src/: add.cpp  main.cpp
Tests/: Test.cpp
